# tessera-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: auth.py  config.py  errors.py  logging_config.py  main.py  observability.py
app/clients/: tessera_data.py
app/handlers/: analyze.py  evals.py  feedback.py  health.py  verdicts.py
app/schemas/: errors.py  feedback.py  transaction.py  verdict.py
app/services/: analyze.py  embedding.py  feedback.py  pricing.py
app/tools/: __init__.py
evals/: __init__.py  __main__.py  golden_dataset.json  runner.py  scorer.py
tests/: conftest.py  test_analyze.py  test_analyze_grounding.py  test_analyze_stream_auth.py  test_analyze_stream_mock.py  test_auth.py  test_embedding.py  test_eval_suite.py  test_feedback.py  test_feedback_persistence.py  test_guardrails.py  test_health.py  test_langfuse_noop.py  test_search_similar_cases.py  test_verdicts.py
